# context-free

./: .gitignore  CHANGELOG.md  LICENSE  cfg  context-free.cabal  flake.nix
app/: Main.hs
app/App/: Config.hs  Helpers.hs  Options.hs
grammars/: example1.cfg  example2.cfg
src/ContextFree/: Grammar.hs  Parsing.hs  StrongEquivalence.hs  Transformations.hs
src/ContextFree/Grammar/: Internal.hs  Parser.hs
src/Data/: HashMultimap.hs
test/: Main.hs
